Updated the CmakeLists of bolo.

--- a/bolo/CMakeLists.txt
+++ b/bolo/CMakeLists.txt
@@ -2,4 +2,5 @@ add_library(bolo STATIC bolo.cc)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-target_link_libraries(bolo copy Threads::Threads)
+target_link_libraries(bolo copy tar compress crypto libfswatch Threads::Threads)
+
